--- a/www/links/links.html
+++ b/www/links/links.html
@@ -1,1 +1,6 @@
-<div class="row">Links</div>
+<ul>
+    <li><a href="http://www.google.com">Google</a></li>
+    <li><a href="http://www.online-go.com">Online Go</a></li>
+    <li><a href="http://www.amazon.com">Amazon</a></li>
+    <li><a href="http://www.github.com">Github</a></li>
+</ul>
