--- a/www/resume/resume.html
+++ b/www/resume/resume.html
@@ -1,1 +1,35 @@
-<p>lots of good stuff</p>
+<h2>Education</h2>
+<h3>Seneca College</h3>
+<p><strong>Program:</strong> Computer Programming and Analysis (CPA)</p>
+<h3>University of Toronto</h3>
+<p><strong>Majors:</strong> Sociology, English</p>
+<br />
+
+<h2>Skills</h2>
+<h3>Office skills</h3>
+<p>Office and records management, database administration, event organization, customer support, travel coordination blah blah</p>
+<h3>Computer skills</h3>
+<p>C, C++, Python, HTML, CSS, Javascript, Microsoft productivity software (Word, Excel, etc), Command line</p>
+
+<br />
+<h2>Experience</h2>
+<h3>Moogle <span>Leader/Overlord - Burning-tree Mage</span></h3>
+<ul>
+    <li>Inspired and won highest peasant death competition among servants</li>
+    <li>Helped coordinate managers to grow cult following</li>
+    <li>Provided untimely deaths to all who opposed</li>
+</ul>
+<h3>Triforce Inc. <span>Front-end Web Developer - Hell, Otherworld - 20014</span></h3>
+<ul>
+    <li>Worked on grass-roots promotional campaigns</li>
+    <li>Burned many forests</li>
+    <li>Killed innocents. Stole candy from baby.</li>
+</ul>
+
+<br />
+<h2>Hobbies</h2>
+<p>World Domination, Baduk, Murder Most Foul</p>
+
+<br />
+<h2>References</h2>
+<p>Available on request</p>
