--- a/www/projects/projects.html
+++ b/www/projects/projects.html
@@ -1,1 +1,7 @@
-<p>lots of good stuff</p>
+<h3>World domination</h3>
+<p>Presented plans to dominate the world based on factual information from HR</p>
+<a href="www.online-go.com">Project page</a>
+
+<h3>6 dan</h3>
+<p>Beat skilled players and improved ranking</p>
+<a href="www.github.com"></a>
