changed behavior on click headings. Aesthetics

--- a/www/writing/writing.html
+++ b/www/writing/writing.html
@@ -1,5 +1,6 @@
 <div ng-controller="WritingController">
-    <h2><a href="javascript:void(0)" ng-click="expand(0)">[i carry your heart with me(i carry it in]</a></h2>
+    <h2>Poetry</h2>
+    <h3><a href="javascript:void(0)" ng-click="expand(0)">[i carry your heart with me(i carry it in]</a></h3>
     <verbatim ng-show="poems[0]">
     i carry your heart with me(i carry it in<br>
     my heart)i am never without it(anywhere<br>
@@ -20,7 +21,7 @@
     i carry your heart(i carry it in my heart)
     </verbatim>
     <br>
-    <h2><a href="javascript:void(0)" ng-click="expand(1)">if you like my poems let them</a></h2>
+    <h3><a href="javascript:void(0)" ng-click="expand(1)">if you like my poems let them</a></h3>
     <verbatim ng-show="poems[1]">
     if you like my poems let them <br>
     walk in the evening,a little behind you<br>
@@ -30,4 +31,6 @@
     on her way to meet her lover(it was<br>
     toward nightfall)with tall and ignorant servants."<br>
     </verbatim>
+
+    <h2>Short Stories</h2>
 </div>
