--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
   <body ng-app="benmantle">
     <div class="container-fluid" ng-controller="MainController">
         <div class="row">
-            <div class="col-xs-6 col-xs-push-1">
+            <div class="text-center">
                 <h1>Ben Mantle</h1>
             </div>
         </div>
@@ -20,67 +20,67 @@
         <div>
             <div class="text-center">
             <dl>
-                <div class="row">
-                    <dt ng-class="{'col-xs-4': !showing[0], 'col-xs-2': showing[0]}"><a href="javascript:void(0)" ng-click="show(0)">Resume</a></dt>
-                    <div class="col-xs-6">
-                      <dd ng-if="!showing[0]">
-                        <h2>Seneca College</h2>
-                          <p><strong>Program:</strong> Computer Programming and Analysis (CPA)</p>
-                      </dd>
-                      <dd ng-if="!showing[0]">
-                        <h2>Programming</h2>
-                        <p>C, C++, Python, HTML, CSS, Javascript, Unix shell</p>
-                      </dd>
-                      <dd ng-if="showing[0]">
-                        <ng-include src="'resume/resume.html'" ></ng-include>
-                      </dd>
-                    </div>
-                </div>
-                <div class="row">
-                    <dt ng-class="{'col-xs-4': !showing[1], 'col-xs-2': showing[1]}"><a href="javascript:void(0)" ng-click="show(1)">Profile</a></dt>
-                    <div class="col-xs-6">
+                <div class="row" ng-show="all() || !showing[1]">
+                    <dt ng-class="{'col-xs-4': showing[1], 'col-xs-2': !showing[1]}"><a href="javascript:void(0)" ng-click="show(1)">Profile</a></dt>
+                    <div class="col-xs-6 grey">
                         <dd>
-                            <div class="col-xs-6" ng-show="showing[1]"><img src="img/me.jpg" class="img-responsive"/></div>
-                            <div ng-class="{'col-xs-6' : showing[1]}">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+                            <div class="col-xs-6" ng-show="!showing[1]"><img src="img/me.jpg" class="img-responsive"/></div>
+                            <div ng-class="{'col-xs-6' : !showing[1]}">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
                         </dd>
                         <dd ng-if="showing[1]">
                             <ng-include src="'profile/profile.html'"></ng-include>
                         </dd>
                     </div>
                 </div>
-                <div class="row">
-                    <dt ng-class="{'col-xs-4': !showing[2], 'col-xs-2': showing[2]}"><a href="javascript:void(0)" ng-click="show(2)">Projects</a></dt>
+                 <div class="row" ng-show="all() || !showing[0]">
+                    <dt ng-class="{'col-xs-4': showing[0], 'col-xs-2': !showing[0]}"><a href="javascript:void(0)" ng-click="show(0)">Resume</a></dt>
                     <div class="col-xs-6">
-                        <dd ng-if="!showing[2]">
+                      <dd ng-if="showing[0]">
+                        <h2>Seneca College</h2>
+                          <p><strong>Program:</strong> Computer Programming and Analysis (CPA)</p>
+                      </dd>
+                      <dd ng-if="showing[0]">
+                        <h2>Programming</h2>
+                        <p>C, C++, Python, HTML, CSS, Javascript, Unix shell</p>
+                      </dd>
+                      <dd ng-if="!showing[0]">
+                        <ng-include src="'resume/resume.html'" ></ng-include>
+                      </dd>
+                    </div>
+                </div>
+                <div class="row" ng-show="all() || !showing[2]">
+                    <dt ng-class="{'col-xs-4': showing[2], 'col-xs-2': !showing[2]}"><a href="javascript:void(0)" ng-click="show(2)">Projects</a></dt>
+                    <div class="col-xs-6 grey">
+                        <dd ng-if="showing[2]">
                             <h3>World domination</h3>
                             <p>Presented plans to dominate the world based on factual information from HR</p>
                             <a href="www.online-go.com">Project page</a>
                         </dd>
-                        <dd ng-if="showing[2]">
+                        <dd ng-if="!showing[2]">
                             <ng-include src="'projects/projects.html'" ></ng-include>
                         </dd>
                     </div>
                 </div>
-                <div class="row">
-                    <dt ng-class="{'col-xs-4': !showing[3], 'col-xs-2': showing[3]}"><a href="javascript:void(0)" ng-click="show(3)">Links</a></dt>
+                <div class="row" ng-show="all() || !showing[3]">
+                    <dt ng-class="{'col-xs-4': showing[3], 'col-xs-2': !showing[3]}"><a href="javascript:void(0)" ng-click="show(3)">Links</a></dt>
                     <div class="col-xs-6">
-                        <dd ng-if="!showing[3]">
+                        <dd ng-if="showing[3]">
                             <br>
                             <a href="http://www.google.com">Google</a><br>
                             <a href="http://www.online-go.com">Online Go</a>
                         </dd>
-                        <dd ng-if="showing[3]">
+                        <dd ng-if="!showing[3]">
                             <ng-include src="'links/links.html'" ></ng-include>
                         </dd>
                     </div>
                 </div>
-                <div class="row">
-                    <dt ng-class="{'col-xs-4': !showing[4], 'col-xs-2': showing[4]}"><a href="javascript:void(0)" ng-click="show(4)">Writing</a></dt>
-                    <div class="col-xs-6">
-                        <dd ng-if="!showing[4]">
+                <div class="row" ng-show="all() || !showing[4]">
+                    <dt ng-class="{'col-xs-4': showing[4], 'col-xs-2': !showing[4]}"><a href="javascript:void(0)" ng-click="show(4)">Writing</a></dt>
+                    <div class="col-xs-6 grey">
+                        <dd ng-if="showing[4]">
                             <p>Poetry, novels, screenwriting, bestsellers...</p>
                         </dd>
-                        <dd ng-if="showing[4]">
+                        <dd ng-if="!showing[4]">
                             <ng-include src="'writing/writing.html'" ></ng-include>
                         </dd>
                     </div>
