tweaked spacing and fixed a couple of style bugs

--- a/www/writing/writing.html
+++ b/www/writing/writing.html
@@ -1,36 +1,40 @@
 <div ng-controller="WritingController">
-    <h2>Poetry</h2>
-    <h3><a href="javascript:void(0)" ng-click="expand(0)">[i carry your heart with me(i carry it in]</a></h3>
-    <verbatim ng-show="poems[0]">
-    i carry your heart with me(i carry it in<br>
-    my heart)i am never without it(anywhere<br>
-    i go you go,my dear;and whatever is done<br>
-    by only me is your doing,my darling)<br>
-                                                          i fear<br>
-    no fate(for you are my fate,my sweet)i want<br>
-    no world(for beautiful you are my world,my true)<br>
-    and it’s you are whatever a moon has always meant<br>
-    and whatever a sun will always sing is you<br>
+    <div class="row">
+        <h2>Poetry</h2>
+        <h3><a ng-click="expand(0)">[i carry your heart with me(i carry it in]</a></h3>
+        <verbatim ng-if="poems[0]">
+        i carry your heart with me(i carry it in<br>
+        my heart)i am never without it(anywhere<br>
+        i go you go,my dear;and whatever is done<br>
+        by only me is your doing,my darling)<br>
+                                                              i fear<br>
+        no fate(for you are my fate,my sweet)i want<br>
+        no world(for beautiful you are my world,my true)<br>
+        and it’s you are whatever a moon has always meant<br>
+        and whatever a sun will always sing is you<br>
+        <br>
+        here is the deepest secret nobody knows<br>
+        (here is the root of the root and the bud of the bud<br>
+        and the sky of the sky of a tree called life;which grows<br>
+        higher than soul can hope or mind can hide)<br>
+        and this is the wonder that's keeping the stars apart<br>
+        <br>
+        i carry your heart(i carry it in my heart)
+            <br><br>
+        </verbatim>
+        <h3><a ng-click="expand(1)">if you like my poems let them</a></h3>
+        <verbatim ng-if="poems[1]">
+        if you like my poems let them <br>
+        walk in the evening,a little behind you<br>
     <br>
-    here is the deepest secret nobody knows<br>
-    (here is the root of the root and the bud of the bud<br>
-    and the sky of the sky of a tree called life;which grows<br>
-    higher than soul can hope or mind can hide)<br>
-    and this is the wonder that's keeping the stars apart<br>
-    <br>
-    i carry your heart(i carry it in my heart)
-    </verbatim>
-    <br>
-    <h3><a href="javascript:void(0)" ng-click="expand(1)">if you like my poems let them</a></h3>
-    <verbatim ng-show="poems[1]">
-    if you like my poems let them <br>
-    walk in the evening,a little behind you<br>
-<br>
-    then people will say<br>
-    "Along this road i saw a princess pass<br>
-    on her way to meet her lover(it was<br>
-    toward nightfall)with tall and ignorant servants."<br>
-    </verbatim>
-
-    <h2>Short Stories</h2>
+        then people will say<br>
+        "Along this road i saw a princess pass<br>
+        on her way to meet her lover(it was<br>
+        toward nightfall)with tall and ignorant servants."<br>
+            <br><br>
+        </verbatim>
+    </div>
+    <div class="row">
+        <h2>Short Stories</h2>
+    </div>
 </div>
