--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css" />
-    <base href="file:///home/sphaso/Git/BenWebsite/www/">
+    <!--base href="file:///home/sphaso/Git/BenWebsite/www/"-->
   </head>
   <body ng-app="benmantle">
     <div class="container-fluid" ng-controller="MainController">
@@ -25,10 +25,10 @@
         <div>
             <div class="text-center">
             <dl>
-                <div class="row" ng-show="all() || !showing[1]">
-                    <dt class="col-xs-2"><a href="javascript:void(0)" ng-click="show(1)">Profile</a></dt>
-                    <div class="col-xs-8" ng-class="{grey: showing[1]}">
-                        <dd>                            
+                <div class="row" ng-show="all() || !showing[1]" ng-class="{grey: showing[1]}">
+                    <dt class="col-xs-2"><a ng-click="show(1)">Profile</a></dt>
+                    <div class="col-xs-8" >
+                        <dd>
                             <div ng-class="{'col-xs-6' : !showing[1]}">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
                             <div class="col-xs-6" ng-show="!showing[1]"><img src="img/me.jpg" class="img-responsive"/></div>
                         </dd>
@@ -37,8 +37,9 @@
                         </dd>
                     </div>
                 </div>
-                 <div class="row" ng-show="all() || !showing[0]">
-                    <dt class="col-xs-2"><a href="javascript:void(0)" ng-click="show(0)">Resume</a><br><a href="http://www.math.harvard.edu/~eriehl/266x/basic.pdf"><span class="fa fa-file-pdf-o"></a></dt>
+                <hr>
+                 <div class="row spacing" ng-show="all() || !showing[0]">
+                    <dt class="col-xs-2"><a ng-click="show(0)">Resume</a><br><a href="http://www.math.harvard.edu/~eriehl/266x/basic.pdf"><span class="fa fa-file-pdf-o"></a></dt>
                     <div class="col-xs-8">
                       <dd ng-if="showing[0]">
                         <h2>Seneca College</h2>
@@ -53,9 +54,10 @@
                       </dd>
                     </div>
                 </div>
-                <div class="row" ng-show="all() || !showing[2]">
-                    <dt class="col-xs-2"><a href="javascript:void(0)" ng-click="show(2)">Projects</a><br><a href="https://github.com/6dan"><span class="fa fa-github"></span></a></dt>
-                    <div class="col-xs-8" ng-class="{grey: showing[1]}">
+                <hr>
+                <div class="row spacing" ng-show="all() || !showing[2]" ng-class="{grey: showing[2]}">
+                    <dt class="col-xs-2"><a ng-click="show(2)">Projects</a><br><a href="https://github.com/6dan"><span class="fa fa-github"></span></a></dt>
+                    <div class="col-xs-8">
                         <dd ng-if="showing[2]">
                             <h3>World domination</h3>
                             <p>Presented plans to dominate the world based on factual information from HR</p>
@@ -66,8 +68,9 @@
                         </dd>
                     </div>
                 </div>
-                <div class="row" ng-show="all() || !showing[3]">
-                    <dt class="col-xs-2"><a href="javascript:void(0)" ng-click="show(3)">Links</a></dt>
+                <hr>
+                <div class="row spacing" ng-show="all() || !showing[3]">
+                    <dt class="col-xs-2"><a ng-click="show(3)">Links</a></dt>
                     <div class="col-xs-8">
                         <dd ng-if="showing[3]">
                             <br>
@@ -79,9 +82,10 @@
                         </dd>
                     </div>
                 </div>
-                <div class="row" ng-show="all() || !showing[4]">
-                    <dt class="col-xs-2"><a href="javascript:void(0)" ng-click="show(4)">Writing</a></dt>
-                    <div class="col-xs-8" ng-class="{grey: showing[1]}">
+                <hr>
+                <div class="row spacing" ng-show="all() || !showing[4]" ng-class="{grey: showing[4]}">
+                    <dt class="col-xs-2"><a ng-click="show(4)">Writing</a></dt>
+                    <div class="col-xs-8">
                         <dd ng-if="showing[4]">
                             <p>Poetry, novels, screenwriting, bestsellers...</p>
                         </dd>
